- https://github.com/eclipse-syson/syson/issues/777[#777] [import] Fix import of some boolean attributes (`Type#isAbstract`, `Feature#isDerived`, `Feature#isEnd`, `Feature#isReadOnly`).
- https://github.com/eclipse-syson/syson/issues/795[#795] [import] Fix an issue where the import failed to resolve `redefinedFeature` references when the `Redefinition` had no name.

=== Improvements

- https://github.com/eclipse-syson/syson/issues/699[#699] [general-view] Add CaseUsage and CaseDefinition in General View diagram.
- https://github.com/eclipse-syson/syson/issues/746[#746] [syson] Update Batmobile template.
- https://github.com/eclipse-syson/syson/issues/717[#717] [import] Handle of aliases and external references have been improved.
- https://github.com/eclipse-syson/syson/issues/756[#756] [diagrams] Add short name in container and compartment item labels.
- https://github.com/eclipse-syson/syson/issues/760[#760] [diagrams] Allow to set short name via direct edit.
- https://github.com/eclipse-syson/syson/issues/761[#761] [details] Make Declared Short Name accessible from the Core tab.
- https://github.com/eclipse-syson/syson/issues/765[#765] [diagrams] Remove default name of relationships and improve edge labels.
- https://github.com/eclipse-syson/syson/issues/767[#767] [explorer] Allow to create dependencies from the Explorer view.
- https://github.com/eclipse-syson/syson/issues/771[#771] [diagrams] Allow the drop of elements on empty diagram nodes.
- https://github.com/eclipse-syson/syson/issues/775[#775] [syson] Exclude `src/test/resources` from checkstyle.
This reduces the time required to build SysON, especially when using Spring Tool Suite.
- https://github.com/eclipse-syson/syson/issues/779[#779] [diagrams] Add `New Subsetting` tool on `PartUsage` to create a `Subsetting` edge and a `PartUsage` that is subset.