@@ -121,6 +121,14 @@
 			<version>2024.9.1</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- Import test jar to access org.eclipse.syson.sysml.util -->
+		<dependency>
+			<groupId>org.eclipse.syson</groupId>
+			<artifactId>syson-sysml-metamodel</artifactId>
+			<version>2024.9.1</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
